# Shadowbyte

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app2.py  app3.py  config.json  gerijacki.py  gerijacki.spec  metAgenda.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/info/: infobyte.py
app/monitor_red/: busc_file.py  monitor.py
app/shadowbyte/: app.py  joan.py
app/tareas/: tareas.py
app/update/: update.py
qr/: qr.py
src/shadowbyte/: __init__.py  __main__.py  cli.py  config.py
src/shadowbyte/core/: files.py  media.py  network.py  security.py  system.py  tasks.py
src/shadowbyte/utils/: __init__.py  display.py
tests/: test_files.py  test_network.py  test_security_config.py  test_system.py  test_tasks.py
